--- a/js deneme/index.html
+++ b/js deneme/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<div class="text">
+<!-- <div class="text">
 
 	<span class="foo">AT2</span>
 	<br>
@@ -16,7 +16,14 @@
 </div>
 
 <button id="button">Buton</button>
-<input type="text" name="" id="kutu" />
+<input type="text" name="" id="kutu" /> -->
+
+<div class="box">
+	<p id="number">0</p>
+	<br>
+	<button type="button" id="arttir">+</button>
+	<button type="button" id="azalt">-</button>
+</div>
 
 <script type="text/javascript" src="script.js"></script>
 </body>
